change stupla design

--- a/stupla/style.css
+++ b/stupla/style.css
@@ -14,7 +14,7 @@ a {
 
 body {
 	margin: 10;
-	background-color: black;
+	background-color: white;
 	padding: 0;
 	font-family: 'PT Sans Caption', Univers, Helvetica, sans-serif;
 	font-size: 14px;
